[package]
name = "rock-paper-sissors"
version = "0.1.0"
edition = "2021"
authors = ["Robert Kerr <rskerr@gmail.com>"]
description = "A simple Rock Paper Sissors game."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
